--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,10 @@ workflows:
           <<: *not_master
           name: node-12
           version: '12'
+      - unit-tests:
+          <<: *not_master
+          name: node-14
+          version: '14'
 
   release:
     jobs:
@@ -33,6 +37,10 @@ workflows:
           <<: *only_master
           name: node-12
           version: '12'
+      - unit-tests:
+          <<: *not_master
+          name: node-14
+          version: '14'
 
       - publish-dry-run:
           <<: *only_master
@@ -50,6 +58,7 @@ workflows:
           requires:
             - node-10
             - node-12
+            - node-14
             - publish-approval
 
 jobs:
@@ -103,6 +112,15 @@ commands:
       - run:
           name: Test
           command: yarn test
+      - run:
+          name: Pack
+          command: npm pack
+      - run:
+          name: Setup Import Test
+          command: echo $PWD && cd .. && cp -a project/test-import/ test-import/ && cd test-import && npm i
+      - run:
+          name: Test Import
+          command: cd ../test-import && npm test
 
   publish-dry-run:
     steps:
