--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./lib/index.d.ts",
   "files": [
     "es/index.d.ts",
-    "es/index.js",
+    "es/index.mjs",
     "es/index.js.map",
     "lib/index.d.ts",
     "lib/index.js",
